[package]
name = "benches"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Blossom benchmark and performance testing."
publish = false

[dev-dependencies]
blossom = { path = "../blossom" }
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "quickmap"
harness = false
