[package]
name = "blossom"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An opinionated MUD game engine written in Rust."
homepage = "https://robertwayne.github.io/blossom"
repository = "https://github.com/robertwayne/blossom/crates/blossom_core"
categories = ["game-engines", "game-development"]
keywords = ["blossom", "mud"]

[dependencies]
argon2 = "0.4"
nectar = { git = "https://github.com/robertwayne/nectar", version = "0.1" }
dashmap = "5"
flume = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
globwalk = "0.8"
iridescent = "0.2"
rand = "0.8"
askama = "0.11"
axum = { git = "https://github.com/tokio-rs/axum/", features = [
    "http1",
    "http2",
    "json",
    "ws",
    "headers",
] }
mime_guess = "2"
rust-embed = { version = "6", features = [
    "interpolate-folder-path",
    "compression",
] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
simsearch = "0.2"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "offline",
    "ipnetwork",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "tracing",
] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tokio-tungstenite = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
rhai = { version = "1", features = [
    "serde",
    "only_i32",
    "f32_float",
    "no_closure",
    "sync",
] }
