[package]
name = "blossom"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An opinionated MUD game engine written in Rust."
homepage = "https://robertwayne.github.io/blossom"
repository = "https://github.com/robertwayne/blossom/"
categories = ["game-engines", "game-development"]
keywords = ["blossom", "mud"]

[dependencies]
argon2 = "0.5"
askama = "0.12"
axum = { version = "0.6", features = [
    "http1",
    "http2",
    "json",
    "ws",
    "headers",
] }
dashmap = "5"
flume = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
globwalk = "0.8"
iridescent = "0.2"
mime_guess = "2"
nectar = { git = "https://github.com/robertwayne/nectar", version = "0.1" }
# We use parking_lot purely for the poison-free API.
parking_lot = { version = "0.12", features = ["deadlock_detection", "nightly"] }
rand = "0.8"
rhai = { version = "1", features = [
    "serde",
    "only_i32",
    "f32_float",
    "no_closure",
    "sync",
] }
rust-embed = { version = "6", features = [
    "interpolate-folder-path",
    "compression",
] }
serde = { version = "1", features = ["derive"] }
simsearch = "0.2"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "ipnetwork",
    "time",
] }
time = { version = "0.3" }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "tracing",
] }
tokio-tungstenite = "0.19"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
toml = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
