[package]
name = "blossom_core"
authors = ["Rob Wagner <rob@sombia.com"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core components of the Blossom MUD engine."
homepage = "https://robertwayne.github.io/blossom"
repository = "https://github.com/robertwayne/blossom/crates/blossom_core"
categories = ["game-engines", "game-development"]
keywords = ["blossom", "mud"]

[dependencies]
# Internal Crates
blossom_config = { path = "../blossom_config", version = "0.1" }
blossom_db = { path = "../blossom_db", version = "0.1" }
blossom_web = { path = "../blossom_web", version = "0.1" }

# Third-Party Crates
argon2 = "0.4"
nectar = { git = "https://github.com/robertwayne/nectar", version = "0.1" }
dashmap = "5.0"
flume = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
globwalk = "0.8"
iridescent = { version = "0.2" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
simsearch = "0.2"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "offline",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "tracing",
] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
rhai = { version = "1.8", features = [
    "serde",
    "only_i32",
    "f32_float",
    "no_closure",
    "sync",
] }
