[package]
name = "blossom_dynamic"
authors = ["Rob Wagner <rob@sombia.com"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Dynamic library linking for faster compile times."
homepage = "https://robertwayne.github.io/blossom"
repository = "https://github.com/robertwayne/blossom/crates/blossom_dynamic"
categories = ["game-engines", "game-development"]
keywords = ["blossom", "mud"]
readme = "README.md"

[dependencies]
blossom_internal = { path = "../blossom_internal", version = "0.1" }

[lib]
crate-type = ["dylib"]