[package]
name = "blossom_ext"
authors = ["Rob Wagner <rob@sombia.com"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extensions to the Blossom core."
homepage = "https://robertwayne.github.io/blossom"
repository = "https://github.com/robertwayne/blossom/crates/blossom_ext"
categories = ["game-engines", "game-development"]
keywords = ["blossom", "mud"]
readme = "README.md"


[dependencies]
serde = "1"