[package]
name = "blossom_telnet"
authors = ["Rob Wagner <rob@sombia.com"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tokio Telnet codec with various MUD protocol extension support for the Blossom MUD engine."
homepage = "https://robertwayne.github.io/blossom"
repository = "https://github.com/robertwayne/blossom/crates/blossom_telnet"
categories = ["network-programming"]
keywords = ["blossom", "mud", "tokio", "telnet", "gmcp"]

[dependencies]
bytes = "1"
tokio-util = { version = "0.6", features = ["codec"] }